# couette-solver-lib

./: .gitignore  CMakeLists.txt  README.md  data.rar
example/: CMakeLists.txt  couette-solver-lib_Godunovmain.cpp  couette-solver-lib_HLLCmain.cpp  couette-solver-lib_main.cpp  soda-solver-lib_main.cpp
hdr/: AbstractSolver.h  AdditionalSolver.h  BorderCondition.h  DataWriter.h  Mixture.h  coeffsolver.h  global.h  godunovsolver.h  godunovsolversoda.h  hllcsolver.h  riemannsolver.h  systemofequation.h
pictures/2023.09.01/couette1/TC1/385174.188527/: density.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
prev_data/: density.txt  e.txt  pressure.txt  temp.txt  velocity.txt  velocity_normal.txt  velocity_tau.txt
src/: AbstractSolver.cpp  AdditionalSolver.cpp  BorderCondition.cpp  DataWriter.cpp  Mixture.cpp  coeffsolver.cpp  godunovsolver.cpp  godunovsolversoda.cpp  hllcsolver.cpp  observer.cpp  riemannsolver.cpp  systemofequation.cpp
